mod3_solution/css/style.css
* {
    box-sizing: border-box;
}

body{
    margin: 0px;
    padding: 0px;
}
/* Header Styles */
#header-nav {
    background-color: grey;
    border: solid 2px;
    border-color: black;
    border-radius: 0px;
}

.container {
    position: relative;
}

h1 {
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold; 
    float: left;
    color: black;
}

#collapsable-nav{
   background-color: white;
}

.navbar-nav {
    margin: 0px -15px;
}

.navbar-header button.navbar-toggle {
    margin-top: -30px;
    clear: left;
    position: absolute;
    top: 45px;
    right: 0px;
    height: 45px;
    border: 2px solid black;
}

.navbar-header button.navbar-toggle .icon-bar {
    background: black;

}

#nav-list a{
    color: black;
    font-family: 'Courier New', Courier, monospace;
    font-size: 1.5em;
    font-weight: bold;
    text-align: center;
}
#nav-list a:hover {
    background-color: grey;
}

#collapsable-nav #nav-list hr {
    margin: 0px;
    border-top: 2px solid black;
}

/* End Header Styles */

/* Body Styles */
h2 {
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-weight: bold;
    font-size: 2.6em;
    color: black;
    margin-bottom: 30px;
}

#chicken-content, #beef-content, #sushi-content {
    background-color: grey;
    margin-bottom: 15px;
}

.header {
    font-family: 'Courier New', Courier, monospace;
    font-size: 1.8em;
    font-weight: bold;
    padding: 10px;
    color: black;
}

.content {
    font-family: 'Courier New', Courier, monospace;
    font-size: 1.5em;
    padding: 15px;
    color: black;
}

/* End Body Styles */

/* Extra Large Devices */
@media (min-width: 1200px){
    #collapsable-nav{
        visibility: hidden;
    }
}

/* Large Devices */
@media (min-width: 992px) and (max-width: 1199px) {
    #collapsable-nav{
        visibility: hidden;
    }
}

/* Medium Devices */
@media (min-width: 768px) and (max-width: 991px){
    #collapsable-nav {
        visibility: hidden;
    }
}

/* Small Devices */
@media (min-width: 576px) and (max-width: 767px){

}

/* Extra Small Devices */
@media (max-width: 575px){

}

